style: alignment fix for playlist creation div

--- a/src/components/LibraryModal/LibraryModal.css
+++ b/src/components/LibraryModal/LibraryModal.css
@@ -48,6 +48,7 @@
   position: absolute;
   bottom: -24px;
   overflow: auto;
+  display: flex;
 }
 
 .playlists {
